# critics

./: .gitignore  CMakeLists.txt  README.md
example/C6H11O-cyclohexoxy/libadiabatz/: adiabatz.cpp
include/: adiabatz.hpp  global.hpp  int2cart.hpp
source/: adiabatz.hpp  global.cpp  global.hpp  int2cart.cpp  main.cpp  mex.cpp  minimum.cpp  saddle.cpp
